<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/system_setting">
    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="系统设置">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pre_loadimage_key"
            android:summaryOff="当前为不加载正文中的图片"
            android:summaryOn="当前为自动加载正文中的图片"
            android:title="正文中加载大图" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_auto_reflush_key"
            android:summaryOff="@string/pref_auto_reflush_off"
            android:summaryOn="@string/pref_auto_reflush_on"
            android:title="@string/pref_auto_reflush_title" />

        <ListPreference
            android:defaultValue="18"
            android:entries="@array/settings_entries_font_size"
            android:entryValues="@array/settings_entry_values_font_size"
            android:key="@string/pre_fontsize_key"
            android:layout="@layout/preference_list_item"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="中号字体"
            android:title="正文字号" />

    </PreferenceCategory>

</PreferenceScreen>